ログイン不可能修正

--- a/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
+++ b/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
@@ -67,6 +67,11 @@
         <mat-icon mat-list-icon>home_work</mat-icon>
         <div mat-line>ランキング管理</div>
       </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item (click)="onClickLogOut()">
+        <mat-icon mat-list-icon>home_work</mat-icon>
+        <div mat-line>ログアウト</div>
+      </mat-list-item>
     </mat-action-list>
   </mat-drawer>
   <mat-drawer-content>
