テナント設定追加

--- a/src/app/components/dashboard-input/dashboard-input.component.html
+++ b/src/app/components/dashboard-input/dashboard-input.component.html
@@ -9,7 +9,7 @@
       [maxLength]="max"
       [minLength]="min"
       [name]="name"
-      [type]="isPassword && hidePassword ? 'password' : 'text'"
+      [type]="isPassword && hidePassword ? 'password' : type"
       matInput
     >
     <button
