--- a/src/app/modules/operation/components/operation-user-detail/operation-user-detail.component.html
+++ b/src/app/modules/operation/components/operation-user-detail/operation-user-detail.component.html
@@ -20,6 +20,9 @@
             </button>
           </mat-form-field>
         </p>
+        <app-dashboard-input
+          formControlName="display_name"
+        >氏名</app-dashboard-input>
         <p>
           <mat-form-field appearance="fill">
             <mat-label>権限</mat-label>
