--- a/src/app/modules/tenant/components/tenant-free-banner-detail/tenant-free-banner-detail.component.html
+++ b/src/app/modules/tenant/components/tenant-free-banner-detail/tenant-free-banner-detail.component.html
@@ -23,75 +23,10 @@
           name="tenant_free_banner_display_space_id"
         ></app-dashboard-select>
 
-        <ng-container formArrayName="images">
-          <h3 mat-subheader>バナー画像</h3>
-          <p>
-            <mat-label>画像を追加</mat-label>
-          </p>
-          <p>
-            <input #imageFileInput (change)="onChangeFiles(imageFileInput.files)" multiple name="image" type="file">
-          </p>
-          <ng-container *ngFor="let image of files; let index = index" [formGroupName]="index">
-            <p>
-              <img *ngIf="fileUrls && fileUrls[index]" [src]="fileUrls[index]" alt="">
-              <button (click)="onDeleteFile(index)" mat-button mat-icon-button type="button">
-                <mat-icon>close</mat-icon>
-              </button>
-            </p>
-            <p>
-              <mat-label>画像を変更</mat-label>
-            </p>
-            <p>
-              <input #imageFileInput (change)="onChangeFile(index, imageFileInput.files ? imageFileInput.files[0] : null)"
-                     name="image"
-                     type="file">
-            </p>
-            <p>
-              <app-dashboard-radio
-                [formControl]="linkFCs[index]"
-                [selects]="linkSelects"
-              >リンク先
-              </app-dashboard-radio>
-            </p>
-            <ng-container *ngIf="linkFCs[index].value === 'cast'">
-              <app-dashboard-select
-                [selects]="castsSelects$ | async"
-                formControlName="cast_id"
-              ></app-dashboard-select>
-
-              <app-dashboard-select
-                *ngIf="castLinkTypeEnabled[index]"
-                [selects]="castLinkTypesSelects[index]"
-                formControlName="cast_link_type_id"
-              ></app-dashboard-select>
-            </ng-container>
-            <ng-container *ngIf="linkFCs[index].value === 'tenant'">
-              <app-dashboard-select
-                [selects]="tenantLinkTypesSelects$ | async"
-                formControlName="tenant_link_type_id"
-              ></app-dashboard-select>
-
-              <app-dashboard-select
-                *ngIf="freeGalleryEnabled[index]"
-                [selects]="galleriesSelects$ | async"
-                formControlName="tenant_free_gallery_id"
-              ></app-dashboard-select>
-
-              <app-dashboard-select
-                *ngIf="foreignLinkEnabled[index]"
-                [selects]="foreignLinks$ | async"
-                formControlName="foreign_link_id"
-              ></app-dashboard-select>
-            </ng-container>
-            <ng-container>
-              <app-dashboard-textarea
-                formControlName="comment"
-                name="comment"
-              >備考
-              </app-dashboard-textarea>
-            </ng-container>
-          </ng-container>
-        </ng-container>
+        <app-tenant-free-banner-images
+          formControlName="images"
+          (changeFiles)="files = $event"
+        ></app-tenant-free-banner-images>
 
 
       </mat-card-content>
