--- a/src/app/components/dashboard-time-range-form/dashboard-time-range-form.component.html
+++ b/src/app/components/dashboard-time-range-form/dashboard-time-range-form.component.html
@@ -1,12 +1,12 @@
 <p>
-  <mat-checkbox [formControl]="open24h">24時間{{ label }}</mat-checkbox>
+  <mat-checkbox [formControl]="open24h" *ngIf="enable24h">24時間{{ label }}</mat-checkbox>
 </p>
 <mat-grid-list [cols]="2" [rowHeight]="80">
   <mat-grid-tile>
     <mat-form-field appearance="fill" hintLabel="">
       <mat-label>{{ label }}開始時間</mat-label>
       <mat-select [formControl]="openTime">
-        <mat-option *ngFor="let hour of startTimeOptions" [value]="hour | number">{{ hour }}:00</mat-option>
+        <mat-option *ngFor="let time of startTimeOptions" [value]="time">{{ time }}</mat-option>
       </mat-select>
     </mat-form-field>
   </mat-grid-tile>
@@ -14,7 +14,7 @@
     <mat-form-field appearance="fill" hintLabel="">
       <mat-label>{{ label }}終了時間</mat-label>
       <mat-select [formControl]="closeTime">
-        <mat-option *ngFor="let hour of getEndTimeOptions(openTime.value)" [value]="hour | number">{{ hour }}:00
+        <mat-option *ngFor="let time of endTimeOptions" [value]="time">{{ time }}
         </mat-option>
       </mat-select>
     </mat-form-field>
