--- a/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
+++ b/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
@@ -56,6 +56,22 @@
         <div mat-line>キャスト管理</div>
       </mat-list-item>
       <mat-divider></mat-divider>
+      <h3 mat-subheader>出勤表</h3>
+      <mat-list-item routerLink="/tenant/cast-schedule-setting">
+        <mat-icon mat-list-icon>home_work</mat-icon>
+        <div mat-line>設定</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item routerLink="/tenant/cast-schedule">
+        <mat-icon mat-list-icon>home_work</mat-icon>
+        <div mat-line>出勤表</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item routerLink="/tenant/cast">
+        <mat-icon mat-list-icon>home_work</mat-icon>
+        <div mat-line>待ち時間</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
       <h3 mat-subheader>フリー画像</h3>
       <mat-list-item routerLink="/tenant/free-image">
         <mat-icon mat-list-icon>home_work</mat-icon>
