--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  color: #333333;
 }
 
 mat-form-field {
@@ -19,4 +20,12 @@ mat-checkbox, mat-radio-button {
 
 img {
   max-width: 100%;
+}
+
+a[routerlink],a[ng-reflect-router-link] {
+  color: #333333;
+}
+
+.mat-dialog-container {
+  min-width: 300px;
 }
