待ち時間対応

--- a/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
+++ b/src/app/modules/tenant/components/tenant-dashboard-container/tenant-dashboard-container.component.html
@@ -67,7 +67,7 @@
         <div mat-line>出勤表</div>
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/tenant/cast">
+      <mat-list-item routerLink="/tenant/cast-schedule-status">
         <mat-icon mat-list-icon>home_work</mat-icon>
         <div mat-line>待ち時間</div>
       </mat-list-item>
