--- a/src/app/components/dashboard-input/dashboard-input.component.html
+++ b/src/app/components/dashboard-input/dashboard-input.component.html
@@ -22,5 +22,13 @@
     >
       <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
+    <button
+      (click)="fc.setValue('')"
+      *ngIf="isClearable"
+      mat-icon-button
+      matSuffix
+    >
+      <mat-icon>time</mat-icon>
+    </button>
   </mat-form-field>
 </p>
