店舗バナー画像対応

--- a/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
+++ b/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
@@ -207,6 +207,10 @@
             <mat-radio-button value="1">使用</mat-radio-button>
           </mat-radio-group>
         </p>
+        <app-operation-tenant-banner-image
+          formControlName="image"
+          (markedDeleteImage)="onMarkedDeleteImage()"
+        ></app-operation-tenant-banner-image>
       </mat-card-content>
       <mat-card-actions align="end">
         <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
