--- a/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
+++ b/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
@@ -202,6 +202,9 @@
           <mat-radio-button value="1">使用</mat-radio-button>
         </mat-radio-group>
       </p>
+      <app-operation-tenant-banner-image
+        formControlName="image"
+      ></app-operation-tenant-banner-image>
     </mat-card-content>
     <mat-card-actions align="end">
       <button [disabled]="fg.invalid" color="primary" mat-raised-button>作成</button>
