--- a/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
+++ b/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
@@ -13,6 +13,10 @@
         <mat-icon mat-list-icon>home_work</mat-icon>
         <div mat-line>店舗グループ</div>
       </mat-list-item>
+      <mat-list-item routerLink="/operation/cast-services">
+        <mat-icon mat-list-icon>home_work</mat-icon>
+        <div mat-line>可能サービス</div>
+      </mat-list-item>
     </mat-action-list>
   </mat-drawer>
   <mat-drawer-content>
