--- a/src/app/modules/operation/components/operation-tenant-banner-image/operation-tenant-banner-image.component.html
+++ b/src/app/modules/operation/components/operation-tenant-banner-image/operation-tenant-banner-image.component.html
@@ -17,44 +17,44 @@
           >
         </p>
       </div>
-      <div class="select-container">
-<!--        <p>-->
-<!--          <app-dashboard-radio-->
-<!--            [formControl]="getLinkFormArrayAt(index)"-->
-<!--            [selects]="linkSelects"-->
-<!--          >リンク先-->
-<!--          </app-dashboard-radio>-->
-<!--        </p>-->
-<!--        <ng-container *ngIf="linkFormArray.at(index).value === 'cast'">-->
-<!--          <app-dashboard-select-->
-<!--            [selects]="castsSelects$ | async"-->
-<!--            formControlName="cast_id"-->
-<!--          ></app-dashboard-select>-->
+      <div class="select-container" [formGroup]="fg">
+        <p>
+          <app-dashboard-radio
+            [formControl]="linkForm"
+            [selects]="linkSelects"
+          >リンク先
+          </app-dashboard-radio>
+        </p>
+        <ng-container *ngIf="linkForm.value === 'cast'">
+          <app-dashboard-select
+            [selects]="castsSelects"
+            formControlName="cast_id"
+          ></app-dashboard-select>
 
-<!--          <app-dashboard-select-->
-<!--            *ngIf="castLinkTypeEnabled[index]"-->
-<!--            [selects]="castLinkTypesSelects[index]"-->
-<!--            formControlName="cast_link_type_id"-->
-<!--          ></app-dashboard-select>-->
-<!--        </ng-container>-->
-<!--        <ng-container *ngIf="linkFormArray.at(index).value === 'tenant'">-->
-<!--          <app-dashboard-select-->
-<!--            [selects]="tenantLinkTypesSelects$ | async"-->
-<!--            formControlName="tenant_link_type_id"-->
-<!--          ></app-dashboard-select>-->
+          <app-dashboard-select
+            *ngIf="castLinkTypeEnabled"
+            [selects]="castLinkTypesSelects"
+            formControlName="cast_link_type_id"
+          ></app-dashboard-select>
+        </ng-container>
+        <ng-container *ngIf="linkForm.value === 'tenant'">
+          <app-dashboard-select
+            [selects]="tenantLinkTypesSelects$ | async"
+            formControlName="tenant_link_type_id"
+          ></app-dashboard-select>
 
-<!--          <app-dashboard-select-->
-<!--            *ngIf="freeGalleryEnabled[index]"-->
-<!--            [selects]="galleriesSelects$ | async"-->
-<!--            formControlName="tenant_free_gallery_id"-->
-<!--          ></app-dashboard-select>-->
+          <app-dashboard-select
+            *ngIf="freeGalleryEnabled"
+            [selects]="galleriesSelects"
+            formControlName="tenant_free_gallery_id"
+          ></app-dashboard-select>
 
-<!--          <app-dashboard-select-->
-<!--            *ngIf="foreignLinkEnabled[index]"-->
-<!--            [selects]="foreignLinks$ | async"-->
-<!--            formControlName="foreign_link_id"-->
-<!--          ></app-dashboard-select>-->
-<!--        </ng-container>-->
+          <app-dashboard-select
+            *ngIf="foreignLinkEnabled"
+            [selects]="foreignLinkSelects"
+            formControlName="foreign_link_id"
+          ></app-dashboard-select>
+        </ng-container>
       </div>
       <button [disabled]="disabled" (click)="onDeleteFile()" mat-button mat-icon-button mat-flat-button color="warn" type="button">
         <mat-icon>close</mat-icon>
