--- a/src/app/modules/tenant/modules/tenant-basic/components/tenant-free-block/tenant-free-block.component.html
+++ b/src/app/modules/tenant/modules/tenant-basic/components/tenant-free-block/tenant-free-block.component.html
@@ -4,4 +4,5 @@
   [dataSource]="list$"
   [displayedColumns]="columns"
   [getNameFn]="getNameFn"
+  (delete)="onDelete($event)"
 ></app-table-list>
