バグフィックス

--- a/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
+++ b/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
@@ -17,6 +17,11 @@
         <mat-icon mat-list-icon>home_work</mat-icon>
         <div mat-line>可能サービス</div>
       </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item (click)="onClickLogout()">
+        <mat-icon mat-list-icon>home_work</mat-icon>
+        <div mat-line>ログアウト</div>
+      </mat-list-item>
     </mat-action-list>
   </mat-drawer>
   <mat-drawer-content>
