--- a/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
+++ b/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
@@ -205,6 +205,7 @@
       <app-operation-tenant-banner-image
         formControlName="image"
       ></app-operation-tenant-banner-image>
+      <app-dashboard-input formControlName="official_site_url">オフィシャルサイトURL</app-dashboard-input>
     </mat-card-content>
     <mat-card-actions align="end">
       <button [disabled]="fg.invalid" color="primary" mat-raised-button>作成</button>
