--- a/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
+++ b/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
@@ -215,6 +215,7 @@
           [foreignLinks]="detail.foreign_links"
           [casts]="detail.casts"
         ></app-operation-tenant-banner-image>
+        <app-dashboard-input formControlName="official_site_url">オフィシャルサイトURL</app-dashboard-input>
       </mat-card-content>
       <mat-card-actions align="end">
         <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
