--- a/src/app/modules/tenant/modules/tenant-layout/components/tenant-layout-banner/tenant-layout-banner.component.html
+++ b/src/app/modules/tenant/modules/tenant-layout/components/tenant-layout-banner/tenant-layout-banner.component.html
@@ -12,6 +12,8 @@
             [galleries]="view.freeGalleries"
             [foreignLinks]="view.foreignLinks"
             [casts]="view.casts"
+            [tenantLinkTypes]="view.tenantLinkTypes"
+            [castLinkTypes]="view.castLinkTypes"
             (delete)="formArray.removeAt(index)"
           ></app-tenant-layout-banner-image>
         </ng-container>
