--- a/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
+++ b/src/app/modules/operation/components/operation-tenant-detail/operation-tenant-detail.component.html
@@ -49,12 +49,7 @@
         </app-dashboard-input>
         <app-dashboard-select [selects]="statusSelects" formControlName="is_suspend">ステータス</app-dashboard-select>
 
-        <p>
-          <mat-form-field appearance="fill" hintLabel="30文字">
-            <mat-label>キャッチフレーズ</mat-label>
-            <input formControlName="catch" matInput max="30" name="catch" type="text">
-          </mat-form-field>
-        </p>
+        <app-dashboard-textarea formControlName="catch">キャッチフレーズ</app-dashboard-textarea>
         <ng-container formArrayName="tel">
           <p>
             <mat-form-field appearance="fill" hintLabel="15文字">
