受付時間にラスト追加

--- a/src/app/modules/tenant/modules/tenant-basic/components/tenant-basic-edit/tenant-basic-edit.component.html
+++ b/src/app/modules/tenant/modules/tenant-basic/components/tenant-basic-edit/tenant-basic-edit.component.html
@@ -46,6 +46,7 @@
 
         <app-dashboard-time-range-form
           [minuteStep]="30"
+          [insertLast]="true"
           [formControl]="receptionTimeCombined"
           label="受付"
         ></app-dashboard-time-range-form>
