--- a/src/app/components/dashboard-time-range-form/dashboard-time-range-form.component.html
+++ b/src/app/components/dashboard-time-range-form/dashboard-time-range-form.component.html
@@ -14,7 +14,7 @@
     <mat-form-field appearance="fill" hintLabel="">
       <mat-label>{{ label }}終了時間</mat-label>
       <mat-select [formControl]="closeTime">
-        <mat-option *ngFor="let time of endTimeOptions" [value]="time">{{ time }}
+        <mat-option *ngFor="let time of endTimeOptions" [value]="time">{{ time === '' ? 'ラスト' : time }}
         </mat-option>
       </mat-select>
     </mat-form-field>
