--- a/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
+++ b/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
@@ -84,6 +84,7 @@
 
       <app-dashboard-time-range-form
         [minuteStep]="30"
+        [insertLast]="true"
         [formControl]="receptionTimeCombined"
         label="受付"
       ></app-dashboard-time-range-form>
