--- a/src/app/modules/tenant/modules/tenant-layout/components/tenant-layout-top/tenant-layout-top.component.html
+++ b/src/app/modules/tenant/modules/tenant-layout/components/tenant-layout-top/tenant-layout-top.component.html
@@ -7,22 +7,10 @@
           <div class="container">
             <h2>左サイド</h2>
 
-            <div
-              id="leftList"
-              cdkDropList
-              [cdkDropListData]="left"
-              cdkDropListConnectedTo="centerList"
-              class="list"
-              (cdkDropListDropped)="drop($event)"
-              [cdkDropListEnterPredicate]="thinPredicate">
-              <div
-                class="box"
-                *ngFor="let item of left"
-                [cdkDragData]="item"
-                cdkDrag>
-                <mat-checkbox [formControl]="enableFormControlsMap[item.id]">{{ item.display_name }}</mat-checkbox>
-              </div>
-            </div>
+            <app-dashboard-select [selects]="contentsSelect" formControlName="side_tenant_layout_contents_type_id">コンテンツ</app-dashboard-select>
+            <app-dashboard-select
+              *ngIf="selectedContentsTypeIdString === 'ranking'"
+              [selects]="rankingSelect" formControlName="side_tenant_layout_contents_ranking">ランキング</app-dashboard-select>
           </div>
 
           <div class="container">
@@ -45,11 +33,6 @@
                 <mat-checkbox [formControl]="enableFormControlsMap[item.id]">{{ item.display_name }}</mat-checkbox>
               </div>
             </div>
-          </div>
-          <div class="container">
-            <h2>右サイド</h2>
-
-            <app-dashboard-select [selects]="contentsSelect" formControlName="top_right_side_tenant_layout_contents_type_id">コンテンツ</app-dashboard-select>
           </div>
         </div>
       </mat-card-content>
