--- a/src/app/modules/operation/components/operation-login/operation-login.component.html
+++ b/src/app/modules/operation/components/operation-login/operation-login.component.html
@@ -20,7 +20,7 @@
             </button>
           </mat-form-field>
         </p>
-        <p *ngIf="failed">ログインに失敗しました</p>
+        <p *ngIf="failed" class="failed">ログインに失敗しました</p>
       </mat-card-content>
       <mat-card-actions>
         <button class="sign-in-button" color="primary" mat-flat-button>ログイン</button>
