--- a/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
+++ b/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
@@ -18,6 +18,11 @@
         <div mat-line>可能サービス</div>
       </mat-list-item>
       <mat-divider></mat-divider>
+      <mat-list-item routerLink="/operation/site-config">
+        <mat-icon mat-list-icon>settings</mat-icon>
+        <div mat-line>サイト管理設定</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
       <mat-list-item (click)="onClickLogout()">
         <mat-icon mat-list-icon>home_work</mat-icon>
         <div mat-line>ログアウト</div>
