お知らせ実装

--- a/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
+++ b/src/app/modules/operation/components/operation-dashboard-container/operation-dashboard-container.component.html
@@ -18,6 +18,11 @@
         <div mat-line>可能サービス</div>
       </mat-list-item>
       <mat-divider></mat-divider>
+      <mat-list-item routerLink="/operation/site-news">
+        <mat-icon mat-list-icon>article</mat-icon>
+        <div mat-line>サイト内お知らせ一覧</div>
+      </mat-list-item>
+      <mat-divider></mat-divider>
       <mat-list-item routerLink="/operation/site-config">
         <mat-icon mat-list-icon>settings</mat-icon>
         <div mat-line>サイト管理設定</div>
