営業時間ラスト対応と置き換え

--- a/src/app/modules/operation/components/operation-login/operation-login.component.html
+++ b/src/app/modules/operation/components/operation-login/operation-login.component.html
@@ -3,12 +3,7 @@
     <mat-card>
       <mat-card-title>ログイン</mat-card-title>
       <mat-card-content>
-        <p>
-          <mat-form-field appearance="fill">
-            <mat-label>ID</mat-label>
-            <input formControlName="login_id" matInput name="login_id" type="text">
-          </mat-form-field>
-        </p>
+        <app-dashboard-input formControlName="login_id" name="login_id" type="text">ID</app-dashboard-input>
         <p>
           <mat-form-field appearance="fill">
             <mat-label>パスワード</mat-label>
